Fixing spacing and visibility of COntriboot entry descriptions

--- a/docs/contriboot/styles/main.css
+++ b/docs/contriboot/styles/main.css
@@ -444,6 +444,7 @@ a,
 }
 .contriboot ul a {
   display: block;
+  line-height: 2.25rem;
   padding: 0.75rem 1rem 0.75rem 1rem;
 }
 .contriboot ul a:hover {
@@ -463,11 +464,21 @@ a,
   text-align: left;
 }
 .contriboot .entry {
-  margin-bottom: 5rem;
+  margin-bottom: 4rem;
+  padding-bottom: 1rem;
+  border: 1px solid var(--darkish-purple);
 }
 .contriboot .entry p {
-  padding: 0 1rem 0 1rem;
+  padding-top: 1.5rem;
+}
+.contriboot .entry .entry__description {
   display: none;
+}
+.contriboot .entry li {
+  padding: 1rem 0 0 1rem;
+}
+.contriboot .entry li li {
+  padding-top: 0;
 }
 .contriboot .entry--active {
   border: 1px solid #fff;
@@ -477,11 +488,14 @@ a,
   color: var(--darkish-purple);
 }
 .contriboot .entry--active p {
+  margin: 0;
+}
+.contriboot .entry--active .entry__description {
   display: block;
 }
 .contriboot .entry__header__votes {
   display: inline-block;
-  margin: 1.5rem 1rem 0.5rem 1rem;
+  margin: 1.5rem 1rem 1rem 1rem;
 }
 .contriboot .entry__header__votes__button {
   background-color: transparent;
@@ -492,6 +506,9 @@ a,
 }
 .contriboot .entries-container {
   padding: 0;
+}
+.contriboot .entry__description {
+  padding: 0 2rem 1rem 1rem;
 }
 .contriboot .user {
   padding: 0rem 0vw 6.75rem 0vw;
